[gd_scene load_steps=22 format=2]

[ext_resource path="res://sprites/gameboard.png" type="Texture" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://Character Bubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/sunrise.png" type="Texture" id=4]
[ext_resource path="res://sprites/sunset.png" type="Texture" id=5]
[ext_resource path="res://UI/Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/World.gd" type="Script" id=7]
[ext_resource path="res://Domino.tscn" type="PackedScene" id=8]
[ext_resource path="res://Path.tscn" type="PackedScene" id=9]
[ext_resource path="res://Nunito/Nunito-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://audio/effects/select.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/effects/next.wav" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Zoom In"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, 2.5 ), Vector2( 1.7, 1.7 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.7, 1.7 ), Vector2( 2.5, 2.5 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 10 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )
Domino = ExtResource( 8 )

[node name="Board" type="Sprite" parent="."]
position = Vector2( -192, 5.96046e-08 )
scale = Vector2( 1.5, 1.5 )
z_index = -1
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -6 )
rotation = -3.14159
scale = Vector2( 0.412824, -2.36452 )
current = true
zoom = Vector2( 2.5, 2.5 )

[node name="Path1" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 80, -600 )
scale = Vector2( 0.2, 0.2 )

[node name="Path2" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( -472, -600 )
scale = Vector2( 0.2, 0.2 )
num = 1

[node name="Path3" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 408, -272 )
scale = Vector2( 0.2, 0.2 )
num = 2

[node name="Path4" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( -792, 288 )
scale = Vector2( 0.2, 0.2 )
num = 3

[node name="Path5" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( -456, 608 )
scale = Vector2( 0.2, 0.2 )
num = 4

[node name="Path6" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 48, 616 )
scale = Vector2( 0.2, 0.2 )
num = 5

[node name="SunrisePath" parent="." instance=ExtResource( 9 )]
position = Vector2( -800, -256 )
scale = Vector2( 0.2, 0.2 )
num = 6

[node name="SunsetPath" parent="." instance=ExtResource( 9 )]
position = Vector2( 384, 312 )
scale = Vector2( 0.2, 0.2 )
num = 7

[node name="Character Bubble1" parent="." instance=ExtResource( 3 )]
position = Vector2( -24, -424 )
scale = Vector2( 1.5, 1.5 )

[node name="Character Bubble2" parent="." instance=ExtResource( 3 )]
position = Vector2( -368, -424 )
scale = Vector2( 1.5, 1.5 )

[node name="Character Bubble3" parent="." instance=ExtResource( 3 )]
position = Vector2( 232, -184 )
scale = Vector2( 1.5, 1.5 )

[node name="Character Bubble4" parent="." instance=ExtResource( 3 )]
position = Vector2( -632, 184 )
scale = Vector2( 1.5, 1.5 )

[node name="Character Bubble5" parent="." instance=ExtResource( 3 )]
position = Vector2( -376, 440 )
scale = Vector2( 1.5, 1.5 )

[node name="Character Bubble6" parent="." instance=ExtResource( 3 )]
position = Vector2( -24, 440 )
scale = Vector2( 1.5, 1.5 )

[node name="sunrise" type="Sprite" parent="."]
position = Vector2( -632, -176 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="sunset" type="Sprite" parent="."]
position = Vector2( 232, 192 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="Settings" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -528, -304 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.67, 0.67 )
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Zoom Out"
"anims/Zoom In" = SubResource( 1 )
"anims/Zoom Out" = SubResource( 2 )

[node name="Start" type="Button" parent="."]
visible = false
margin_left = 592.0
margin_top = -112.0
margin_right = 912.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Button" parent="."]
margin_left = -1128.0
margin_top = 496.0
margin_right = -823.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 4 )
text = "Ask For Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
visible = false
margin_left = -344.0
margin_top = 576.0
margin_right = -40.0
margin_bottom = 668.0
custom_fonts/font = SubResource( 9 )
text = "Next Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="Label" parent="."]
margin_left = -1224.0
margin_top = -664.0
margin_right = -919.0
margin_bottom = -385.0
custom_fonts/font = SubResource( 5 )
text = "'s
Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="Label" parent="."]
visible = false
margin_left = 368.0
margin_top = -664.0
margin_right = 1256.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Tally Up Your
 Points! 
(Hover over
faces to see
scores)"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlloyPopup" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1336.0
margin_top = -880.0
margin_right = -136.0
margin_bottom = -80.0001
rect_scale = Vector2( 1.4, 1.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="AlloyPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -568.0
margin_right = 576.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 6 )
text = "Alloy Acquired!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alloy" type="Label" parent="AlloyPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -568.0
margin_top = -264.0
margin_right = 576.0
margin_bottom = -126.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "Electrum"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="AlloyPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -504.0
margin_top = 8.0
margin_right = 516.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 7 )
text = "Electrum is an alloy of gold and silver.
It represents blah blab an dblah."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="AlloyPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -80.0
margin_right = 41.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 8 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CentralDomino" parent="." instance=ExtResource( 8 )]
position = Vector2( -192, 0 )
placed = true

[node name="Place" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="Acquire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="NextSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="AlloyPopup/Close" to="." method="_on_Close_pressed"]

[editable path="Character Bubble1"]

[editable path="Character Bubble1/Score"]

[editable path="Settings"]

[editable path="CentralDomino"]
